# CRename

./: .gitignore  CRename.kdev4  CRename.sln  CRename.vcxproj  CRename.vcxproj.filters  README.md
src/: CMakeLists.txt  CRule.cpp  CRule.h  CRuleInsert.cpp  CRuleInsert.h  CRuleNumber.cpp  CRuleNumber.h  CRuleRemove.cpp  CRuleRemove.h  CRuleReplace.cpp  CRuleReplace.h  CRuleSwitchCase.cpp  CRuleSwitchCase.h  common.h  constants.h  file_functions.cpp  file_functions.h  main.cpp  rule_functions.cpp  rule_functions.h  utilities.cpp  utilities.h
